--- a/forumStyle.css
+++ b/forumStyle.css
@@ -78,50 +78,72 @@ a {
 
 .bottomHeader {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  flex-wrap: wrap;
   background-color: rgba(115, 180, 166, 0.6);
   border-radius: 20px;
   margin: 9em auto 9em auto;
   color: white;
   width: 85%;
-  
+  padding: 25px 0px 25px 0px;
 }
 
-.left {
+.forumHeader {
   display: flex;
-  flex-direction: column;
-  margin: 1em 2em 1em 2em;
   justify-content: center;
   align-items: center;
-  width: 40vw;
-  text-align: center;
-}
-
-#headerText {
-  font-size: 40px;
-  text-shadow: 0px 0px 20px  rgba(0, 0, 0, 0.9);
-}
-
-#descriptionText {
-  font-size: 20px;
-  line-height: 1.4em;
-  text-align: justify;
-  margin-top: -1em;
-}
-
-.right {
-  margin: 1em 1em;
-  
-}
-
-#headerImage {
-  width: 35vw;
-  border-radius: 70px;
+  background-color: rgb(36, 161, 40, 0.6);
+  width: 1000px;
+  height: 80px;
+  border-radius: 2px;
+  border-color: rgb(0, 0, 0, 0.7);
   border-style: solid;
-  border-color: white;
+  border-width: 1px;
+}
+
+.forumPost {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(250, 250, 250);
+  width: 1000px;
+  height: 80px;
+  border-radius: 2px;
+  border-color: rgb(0, 0, 0, 0.7);
+  border-style: solid;
+  border-width: 1px;
+}
+
+.post,
+.postSubject {
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  justify-content: left;
+  color: black;
+  gap: 10px;
+  padding: 0 10px 0 10px;
+}
+
+
+.threadsMessages {
+  width: 200px;
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: black;
+  gap: 10px;
+}
+
+.threadsContainer,
+.messagesContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  vertical-align: middle;
 }
 
 /* signUp button CSS */
